# Data-Validation-Profiling-Toolkit-

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  report.md  requirements.txt  test_data.csv
datacheckr/: config.py  core.py  loaders.py  report.md  reporters.py
datacheckr-docs/: mkdocs.yml
datacheckr-docs/docs/: design.md  index.md  usage.md
tests/: test_core.py  test_loaders.py
