[project]
name = "datacheckr"
version = "0.1.0"
description = "A lightweight Python data validation and profiling toolkit"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name="Vishnu", email="your.email@example.com" }
]
dependencies = [
    "pandas>=1.3",
    "pyarrow>=7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "black>=23.3.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]         # Errors, pyflakes, import sorting
fixable = ["ALL"]
exclude = ["tests", "build", ".venv"]

[tool.coverage.run]
branch = true
source = ["datacheckr"]

[tool.coverage.report]
omit = [
    "*/__init__.py",
    "*/tests/*",
    "*/.venv/*"
]
show_missing = true
precision = 2
